--- a/design/templates/OpenGame/_page/navbar_resources_vertical.tpl.html
+++ b/design/templates/OpenGame/_page/navbar_resources_vertical.tpl.html
@@ -1,3 +1,4 @@
+<table class="border_image_small" id="navbar_resources">
 <tr class="c_l">
   <th nowrap><!-- IF $NAVBAR_RESOURCES_ALLY -->{L_sys_alliance}<!-- ELSE -->{L_sys_resources}<!-- ENDIF --></th>
   <th class="c_l" nowrap>{L_tech_storage}</th>
@@ -64,3 +65,4 @@
   <!-- ENDIF -->
 </tr>
 <!-- ENDIF -->
+</table>
