--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -10,7 +10,7 @@
 
   <!-- IF $PAGE_HINT -->
   <br />
-  <div style="max-width: 50em; min-width: 20em;">
+  <div style="max-width: 50em; min-width: 20em; display: inline-block;">
     <table width="100%" border="0" cellpadding="0" cellspacing="1" class="border_image_small">
       <tr><th class="c_c  neutral">{L_sys_hint}</th></tr>
       <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
