--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -167,7 +167,9 @@
           </tr>
         <!-- END ques -->
 
-        <!-- INCLUDE navbar_resources -->
+        <tr><td>
+        <!-- INCLUDE _page/navbar_resources -->
+        </td></tr>
       </table>
 
       <!-- INCLUDE planet_fleet_list -->
