INT-fix-45a36: Fixed glitch on Planet Overview

--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -167,7 +167,7 @@
           </tr>
         <!-- END ques -->
 
-        <tr><td>
+        <tr><td colspan="5" align="center">
         <!-- INCLUDE _page/navbar_resources -->
         </td></tr>
       </table>
