INT-fix-45a39: Fixed rendering page hint beyond content wrapper for templates which renders page at one pass

--- a/design/templates/OpenGame/_page/_00_header.tpl.html
+++ b/design/templates/OpenGame/_page/_00_header.tpl.html
@@ -48,7 +48,7 @@
           <!-- INCLUDE _page/navbar_additions -->
 
           <div id="__content" style="text-align: center;">
-            <div style="display: inline-block;">
+            <div style="display: block;">
               {__RENDERED_CONTENT}
             </div>
           </div> <!-- __content -->
