--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -8,7 +8,8 @@
     <!-- DEFINE $PAGE_HINT = '{L_PAGE_HINT}' -->
   <!-- ENDIF -->
 
-  <!-- IF $PAGE_HINT -->
+  <!-- IF $PAGE_HINT && ! PAGE_HINT_HIDE -->
+<div style="text-align: center;">
   <br />
   <div style="max-width: 50em; min-width: 20em; display: inline-block;">
     <table width="100%" border="0" cellpadding="0" cellspacing="1" class="border_image_small">
@@ -16,5 +17,6 @@
       <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
     </table>
   </div>
+</div>
   <!-- ENDIF -->
 <!-- ENDIF -->
