INT-fix-45a41: Removed border

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3964,8 +3964,7 @@ td.error_message {
 }
 
 .planet_overview #navbar_resources {
-  border: 3px solid red;
+  border: 0 solid transparent;
   width: 100%;
   margin: 0;
-
 }
