INT-feat-45a44: Planet Overview made responsive. Also fixed some formatting error. Also fixed result message duplicating

--- a/design/templates/OpenGame/_page/_00_header.tpl.html
+++ b/design/templates/OpenGame/_page/_00_header.tpl.html
@@ -47,10 +47,8 @@
 
           <!-- INCLUDE _page/navbar_additions -->
 
-          <div id="__content" style="text-align: center;">
-            <div style="display: block;">
-              {__RENDERED_CONTENT}
-            </div>
+          <div id="__content">
+            {__RENDERED_CONTENT}
           </div> <!-- __content -->
 
           <div id="copyright">
