--- a/design/css/login.css
+++ b/design/css/login.css
@@ -150,6 +150,10 @@ body {
 #log_main {
   color: #e6ebfb;
   background-color : #000000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #copyright, #copyright #supernova_ws
@@ -202,6 +206,7 @@ body {
 #login_menu {
   padding: 1em 0;
   border-top: 0.1em solid white;
+  width: 100%;
 }
 
 .menu_line :not(:last-child):after
