--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -77,7 +77,7 @@
   <!-- ENDIF -->
 <!-- ENDIF -->
 
-<form action="index.php?page=options&mode=change" method="post" name="fOptions" enctype="multipart/form-data">
+<form action="index.php?page=options&mode=change" method="post" name="fOptions" enctype="multipart/form-data" style="display: inline-block;">
   <input type="hidden" name="refresh" value="1" />
 
   <div id="tab_container" style="font-size: 1em; width: 50em; display: none;" class="tabs">
