LNG-45a87: EN localization update

--- a/design/templates/OpenGame/_page/navbar.tpl.html
+++ b/design/templates/OpenGame/_page/navbar.tpl.html
@@ -109,9 +109,9 @@
         </div>
 
         <div class="contF" id="navbar_font_wrapper">
-          <button id="font_minus">Шрифт -</button>
-          <button id="font_normal">Норма</button>
-          <button id="font_plus">Шрифт +</button>
+          <button id="font_minus">{L_navbar_font} -</button>
+          <button id="font_normal">{L_navbar_font_normal}</button>
+          <button id="font_plus">{L_navbar_font} +</button>
         </div>
       </div>
       </div>
