--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -9,166 +9,15 @@
 <!-- ENDIF -->
 
 <!-- BEGIN planet -->
+  <!-- DEFINE $PLANET_PLANET_ID = '{planet.ID}' -->
+
   <!-- IF $OVERVIEW && (! LIST_COLUMN_COUNT || planet.S_ROW_COUNT % LIST_COLUMN_COUNT == 0)  -->
   <tr>
   <!-- ENDIF -->
-  <td valign="top" class="{$CELL_CLASS} pointer" width="{$CELL_PLANET}" align="center">
+  <td valign="top" class="{$CELL_CLASS} pointer" align="center">
   <!-- IF planet.ID -->
-    <!-- IF planet.ID == PLANET_ID || (planet.MOON_ID == PLANET_ID && $OVERVIEW) -->
-      <!-- DEFINE $PLANET_IMG_SIZE = 100 -->
 
-    <!-- КЛЮЧ -->
-      <!-- DEFINE $FRAME_WIDTH = 112 -->
-    <!-- ELSE -->
-      <!-- DEFINE $PLANET_IMG_SIZE = 75 -->
-
-    <!-- КЛЮЧ -->
-      <!-- DEFINE $FRAME_WIDTH = 87 -->
-    <!-- ENDIF -->
-
-    <!-- IF planet.MOON_ID == PLANET_ID -->
-      <!-- DEFINE $MOON_IMG_SIZE = '66' -->
-    <!-- ELSE -->
-      <!-- DEFINE $MOON_IMG_SIZE = '33' -->
-    <!-- ENDIF -->
-
-    <div class="planet_list_top{$FRAME_WIDTH}">
-      <!-- IF $OVERVIEW -->
-      <div><!-- IF planet.MOON_ID == PLANET_ID -->{L_sys_moon} {planet.MOON_NAME}<!-- ELSE -->{planet.NAME}<!-- ENDIF --><br />[{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]</div>
-      <!-- ENDIF -->
-
-      <div class="planet_list_wrap">
-        <div class="left_top images" planet_id="{planet.ID}">
-          <!-- IF $PLANET_IMG_SIZE == 75 -->
-            <!-- DEFINE $PLANET_IMG_SIZE_PREFIX = 's_' -->
-          <!-- ELSE -->
-            <!-- DEFINE $PLANET_IMG_SIZE_PREFIX = '' -->
-          <!-- ENDIF -->
-          <img src="{I_[$PLANET_IMG_SIZE_PREFIX][planet.IMAGE]}" class="element_fill_wrap" go="" />
-
-
-          <div class="icon_25per_left_1" title="{planet.STRUCTURE}" go="build">
-            <img src="{D_SN_ROOT_VIRTUAL}design/images/build_building.png" class="icon_fill <!-- IF planet.STRUCTURE_SLOTS -->a75<!-- ELSE -->a50 o50<!-- ENDIF -->" />
-            <!-- IF planet.STRUCTURE_SLOTS -->
-            <span class="a75 left_top">{planet.STRUCTURE_SLOTS}</span>
-            <!-- ENDIF -->
-          </div>
-          <div class="icon_25per_left_2" title="{planet.HANGAR}" go="build" mode="fleet" >
-            <img src="{D_SN_ROOT_VIRTUAL}design/images/build_hangar.png" class="icon_fill <!-- IF planet.HANGAR_SLOTS -->a75<!-- ELSE -->a50 o50<!-- ENDIF -->" />
-            <!-- IF planet.HANGAR_SLOTS -->
-            <span class="a75 left_top">{planet.HANGAR_SLOTS}</span>
-            <!-- ENDIF -->
-          </div>
-          <div class="icon_25per_left_3" title="{planet.DEFENSE}" go="build" mode="defense">
-            <img src="{D_SN_ROOT_VIRTUAL}design/images/build_defense.png" class="icon_fill <!-- IF planet.DEFENSE_SLOTS -->a75<!-- ELSE -->a50 o50<!-- ENDIF -->" />
-            <!-- IF planet.DEFENSE_SLOTS -->
-            <span class="a75 left_top">{planet.DEFENSE_SLOTS}</span>
-            <!-- ENDIF -->
-          </div>
-
-          <!-- IF planet.PLANET_GOVERNOR_ID && planet.PLANET_GOVERNOR_LEVEL -->
-          <span class="a75 icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" go="" mode="manage">
-            <img src="{I_[planet.PLANET_GOVERNOR_ID]}" class="icon_fill o75">
-            <span class="a75 left_bottom">{planet.PLANET_GOVERNOR_LEVEL}</span>
-          </span>
-          <!-- ENDIF -->
-
-          <span title="{L_flt_gather_all}" class="a75 icon-gather-wrapper icon_gather" go="fleet" mode="5"></span>
-
-          <!-- IF planet.FLEET_OWN -->
-          <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" class="a75 icon_25per_top_2" go="flying" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')" />
-          <!-- ENDIF -->
-
-          <!-- IF planet.FLEET_ENEMY -->
-          <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" go="" />
-          <!-- ENDIF -->
-
-          <!-- IF planet.MOON_ID -->
-            <div class="right_top percent{$MOON_IMG_SIZE}" planet_id="{planet.MOON_ID}">
-              <img src="{I_s_[planet.MOON_IMG]}" class="icon_fill" go="" title="{planet.MOON_NAME} [{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]" />
-
-              <!-- IF $MOON_IMG_SIZE == '66' -->
-              <span title="{L_flt_gather_all}" class="a75 icon_25per_right_4" go="fleet" mode="5">
-                <div class="icons icon-gather"></div>
-              </span>
-              <!-- ENDIF -->
-
-              <span class="planet_list_submoon_fields">
-                <div class="fl planet_list_submoon_filler <!-- IF planet.MOON_FILL >= 100 -->negative<!-- ELSEIF planet.MOON_FILL > 80 -->neutral<!-- ELSE -->positive<!-- ENDIF -->_bg" style="width: {planet.MOON_FILL}%;"></div>
-              </span>
-
-              <!-- IF planet.MOON_ENEMY != 0 -->
-              <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" go="">
-              <!-- ENDIF -->
-            </div>
-          <!-- ENDIF -->
-        </div>
-
-        <!-- IF planet.METAL_PERCENT < 50 --> 
-          <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
-        <!-- ELSEIF planet.METAL_PERCENT < 80 --> 
-          <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
-        <!-- ELSEIF planet.METAL_PERCENT < 100 --> 
-          <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-        <!-- ELSE -->
-          <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-        <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} res_bar metal_bar">
-          <div class="planet_list_bar metal_bg" style="height: {planet.METAL_PERCENT}%"></div>
-        </div>
-        <!-- IF planet.CRYSTAL_PERCENT < 50 --> 
-          <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
-        <!-- ELSEIF planet.CRYSTAL_PERCENT < 80 --> 
-          <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
-        <!-- ELSEIF planet.CRYSTAL_PERCENT < 100 --> 
-          <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-        <!-- ELSE -->
-          <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-        <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} res_bar crystal_bar">
-          <div class="planet_list_bar crystal_bg" style="height: {planet.CRYSTAL_PERCENT}%"></div>
-        </div>
-        <!-- IF planet.DEUTERIUM_PERCENT < 50 -->
-          <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
-        <!-- ELSEIF planet.DEUTERIUM_PERCENT < 80 -->
-          <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
-        <!-- ELSEIF planet.DEUTERIUM_PERCENT < 100 -->
-          <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-        <!-- ELSE -->
-          <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-        <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} res_bar deuterium_bar">
-          <div class="planet_list_bar deuterium_bg" style="height: {planet.DEUTERIUM_PERCENT}%"></div>
-        </div>
-
-        <!-- IF planet.FILL < 50 -->
-          <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-        <!-- ELSEIF planet.FILL < 80 -->
-          <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-        <!-- ELSEIF planet.FILL < 100 -->
-          <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
-        <!-- ELSE -->
-          <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
-        <!-- ENDIF -->
-      </div>
-
-
-      <div class="planet_list_fields">
-        <div style="width: {planet.FILL}%;" class="{$FIELD_COLOR} bar"></div>
-        <div class="numbers">{planet.FIELDS_CUR}&nbsp;/&nbsp;{planet.FIELDS_MAX}</div>
-      </div>
-
-      <div class="ov_struc_timer" id="ov_building{planet.ID}">{L_sys_no_task}</div>
-      <!-- IF .planet.building_que -->
-        <div id="ov_building{planet.ID}_timer" style="color: darkgrey;"></div>
-
-        <script type='text/javascript'>
-          sn_timers.unshift({id: 'ov_building{planet.ID}', type: TIMER_BUILD_QUE_V1, options: { msg_done: '{L_sys_no_task}', que: [
-            <!-- BEGIN building_que -->['{building_que.ID}', '{building_que.NAME} ({building_que.LEVEL})', {building_que.TIME}, '{building_que.AMOUNT}'],<!-- END building_que -->
-          ]}});
-        </script>
-      <!-- ENDIF -->
-    </div>
+    <!-- INCLUDE planet_list_info -->
 
     <!-- IF $OVERVIEW -->
     <br /><br />
