--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -81,8 +81,10 @@ th, td, input, select, textarea {
   background-color: #344566;
 }
 
-td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
-  background-image: none; /* url("images/table_th_background.png");*/
+td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th,
+table.c_l th, table.c_c th, table.c_j th, table.c_r th
+{
+  background-image: none;
   background-color: #13233E;
 }
 
