--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -165,7 +165,9 @@ input, select, textarea, div.z {
   background-color     : #242424;
 }
 
-.header, .th, .td, td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
+.header, .th, .td, td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th,
+table.c_l th, table.c_c th, table.c_j th, table.c_r th
+{
   background-image     : url("img/bg1.gif");
 }
 
