--- a/design/templates/OpenGame/planet_fleet_list.tpl.html
+++ b/design/templates/OpenGame/planet_fleet_list.tpl.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE fleet_javascript -->
 
-<table width="522">
+<table width="522" id="fleet_list_table" class="border_image_small">
   <tr class="c_c">
     <th width=70>{L_event_time}</th>
     <th width=46>{L_ov_fleet}</th>
