--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -31,8 +31,13 @@
   [{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}] {PLANET_TYPE_TEXT} "{PLANET_NAME}"
 </h2>
 
-<div style="display: flex;flex-wrap: wrap;justify-content:center;align-items: flex-start;" class="planet_overview">
-      <table width="522">
+<style type="text/css">
+</style>
+
+
+<div class="planet_overview">
+  <div id="planet_overview_double">
+      <table id="planet_info_table">
         <tr>
           <th colspan=5 nowrap class="c_c">
             <table class="markup" width="100%">
@@ -170,12 +175,13 @@
         <!-- INCLUDE _page/navbar_resources -->
         </td></tr>
       </table>
+    <!-- INCLUDE planet_fleet_list -->
+  </div>
 
-      <table border="0" cellspacing=0 cellpadding=0 width="200" class="markup">
-        <!-- INCLUDE planet_list -->
-      </table>
-
-  <!-- INCLUDE planet_fleet_list -->
+  <div class="planet_overview_list">
+    <!-- INCLUDE planet_list_overview -->
+  </div>
+  <!--<img src="http://localhost/supernova/trunk/skins/EpicBlue/planeten/small/s_dschjungelplanet01.jpg">-->
 </div>
 
 <div id="admin_message"></div>
