CODE-misc-45a102: Misc changes to support other templates

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -524,6 +524,7 @@ input[type=text].coordinate {
   margin: 0.5em 0.5em;
   flex-grow: 10;
   font-size: 125%;
+  max-width: 20em;
 }
 
 #navbar_player_count {
