--- a/design/templates/OpenGame/_page/navbar_planet_select.tpl.html
+++ b/design/templates/OpenGame/_page/navbar_planet_select.tpl.html
@@ -1,4 +1,4 @@
-  <select size="1" onchange="changePlanet(this);" id="navbar_planet_select" style="max-width: 20em" class="js_navbar_planet_select">
+  <select size="1" onchange="changePlanet(this);" id="navbar_planet_select" class="js_navbar_planet_select">
     <!-- BEGIN topnav_planets -->
     <option {topnav_planets.SELECTED} value="{topnav_planets.ID}">
       <!-- IF topnav_planets.IS_CAPITAL -->&#9813;<!-- ENDIF -->
