--- a/design/templates/OpenGame/planet_sector_buy.tpl.html
+++ b/design/templates/OpenGame/planet_sector_buy.tpl.html
@@ -21,7 +21,7 @@
       modal: true,
       open: function() {
         var element = $(this).parent();
-        var selected_planet = $('#navbar_planet_select').find('option:selected');
+        var selected_planet = $('.js_navbar_planet_select').find('option:selected');
         element.find('.ui-dialog-titlebar').css('display', 'block');
         element.find('.ui-dialog-buttonpane button:last').focus();
         element.find('input[name=cp]').val(selected_planet.val());
